Table users {
  id integer [primary key]
  username varchar
  email varchar [unique]
  password varchar
  created_at timestamp
  updated_at timestamp
}

Table roles {
  id integer [primary key]
  name varchar [unique]
  description text
}

Table user_roles {
  user_id integer [primary key]
  role_id integer [primary key]
  assigned_at timestamp
}

Table posts {
  id integer [primary key]
  title varchar
  body text [note: 'Content of the post']
  user_id integer
  status varchar
  created_at timestamp
  updated_at timestamp
}

Table comments {
  id integer [primary key]
  post_id integer
  user_id integer
  content text
  created_at timestamp
}

Table likes {
  user_id integer [primary key]
  post_id integer [primary key]
  liked_at timestamp
}

Table follows {
  following_user_id integer [primary key]
  followed_user_id integer [primary key]
  created_at timestamp 
}

Table categories {
  id integer [primary key]
  name varchar [unique]
  description text
}

Table post_categories {
  post_id integer [primary key]
  category_id integer [primary key]
}

Table profiles {
  user_id integer [primary key]
  bio text
  profile_picture varchar
  website varchar
  location varchar
  birthdate date
}

Ref: posts.user_id > users.id // many-to-one

Ref: comments.post_id > posts.id // many-to-one
Ref: comments.user_id > users.id // many-to-one

Ref: likes.user_id > users.id // many-to-one
Ref: likes.post_id > posts.id // many-to-one

Ref: follows.following_user_id > users.id // self-referencing
Ref: follows.followed_user_id > users.id // self-referencing

Ref: user_roles.user_id > users.id // many-to-one
Ref: user_roles.role_id > roles.id // many-to-one

Ref: post_categories.post_id > posts.id // many-to-one
Ref: post_categories.category_id > categories.id // many-to-one

Ref: profiles.user_id > users.id // one-to-one
